[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Sprites/Enemies/Bat/BatFly3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Enemies/Bat/BatFly2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Enemies/Bat/BatFly1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Scenes/Characters/Bat.gd" type="Script" id=4]
[ext_resource path="res://Assets/Shaders/FlashShader.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_blend = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Fly",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 120.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 5 )

[sub_resource type="Animation" id=8]
resource_name = "Flash"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_blend")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Flutter"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Bat" type="KinematicBody2D"]
material = SubResource( 7 )
collision_layer = 2147483648
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
use_parent_material = true
frames = SubResource( 2 )
animation = "Fly"
frame = 1
speed_scale = 2.0
playing = true

[node name="PlayerDetectArea" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectArea"]
position = Vector2( 0, -2.5 )
shape = SubResource( 3 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483652

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -2.5 )
shape = SubResource( 4 )

[node name="InvisiblityTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/Flash = SubResource( 8 )
anims/Flutter = SubResource( 5 )
anims/Idle = SubResource( 6 )
[connection signal="body_entered" from="PlayerDetectArea" to="." method="_on_PlayerDetectArea_body_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="InvisiblityTimer" to="." method="_on_InvisiblityTimer_timeout"]
